@@ -1,714 +1,1218 @@
 # 🚀 版本日志
 
-## 2.9.4 (2022-07-12)
+### 2.10.41 (2023-06-16)
 
 ### 🐣 新增功能
 
-1. 【server】docker 支持配置私有仓库地址（感谢@🐠）
-2. 【server】构建 Docker 镜像支持推送到仓库中
+1. 【server】新增 SSH 列表支持显示 docker 版本信息
+2. 【server】优化 Docker 镜像增加批量删除（已经被容器使用的镜像不会删除）
+3. 【server】优化 启用 Jpom 新版专属 logo
+4. 【server】新增 工作空间新增分组字段（存在多个分组时页面切换将使用二级选择）（感谢@酱总）
+5. 【server】新增 仓库支持导入导出
+6. 【server】新增 镜像创建容器支持配置 hostname、集群服务支持配置 hostname（感谢@心光）
 
 ### 🐞 解决BUG、优化功能
 
-1. 【agent】插件端上传文件大小配置恢复默认配置（之前版本遗漏）
-2. 【server】docker 连接使用连接池实现
-
-------
-
-## 2.9.3 (2022-07-08)
-
-### 🐣 新增功能
-
-1. 【server】新增容器 stats ,方便实时查看容器内存、网络信息
-2. 【server】SSH 文件管理新增重命名文件功能
-3. 【server】新增全局配置,解决 git httpProxy （感谢[@五六](https://gitee.com/tutu-father) [Gitee issues I5EY03](https://gitee.com/dromara/Jpom/issues/I5EY03) ）
-4. 【server】新增更新容器配置（CPU、内存等）
-5. 【server】新增页面 ICON 配置属性：`jpom.iconFile` （感谢[@flyhigh318](https://gitee.com/flyhigh318) [Gitee issues I5FKMW](https://gitee.com/dromara/Jpom/issues/I5FKMW) ）
-6. 【server】SSH 脚本新增跨工作空间同步功能 （感谢[@flyhigh318](https://gitee.com/flyhigh318) [Gitee issues I5FC9R](https://gitee.com/dromara/Jpom/issues/I5FC9R) ）
-7. 【server】服务端脚本模版新增跨工作空间同步功能
-8. 【server】构建新增事件脚本属性,在构建环节可以执行指定脚本来实现部分功能（感谢[@沈世举](https://gitee.com/shen-shiju) [Gitee issues I5FKFM](https://gitee.com/dromara/Jpom/issues/I5FKFM) ）
-9. 【server】优化构建任务独立线程池,并且新增配置属性 `build.poolSize`、`build.poolWaitQueue` （感谢@小翼哥）
-10. 【agent】配置项目是否备份控制台日志属性独立：`log.autoBackToFile` （感谢@Vergil。）
-
-### 🐞 解决BUG、优化功能
-
-1. 升级 SpringBoot、Hutool、jgit、svnkit
-2. 【server】docker 加入集群无法正常使用问题
-3. 【server】项目文件备份列表不能取消弹窗（点击关闭依然执行）问题（感谢@ʟᴊx💎💎）
-4. 【server】修复编辑构建仓库切换事件重复问题 （感谢[@五六](https://gitee.com/tutu-father) [Gitee issues I5F35E](https://gitee.com/dromara/Jpom/issues/I5F35E) ）
-5. 【server】修复 windows 执行脚本出现异常（感谢[@all-around-badass](https://gitee.com/all-around-badass) [Gitee issues I5FK0K](https://gitee.com/dromara/Jpom/issues/I5FK0K) ）
-
-------
-
-## 2.9.2 (2022-06-27)
-
-### 🐣 新增功能
-
-1. 【agent】插件端白名单新增 nginx 安装路径,解决 nginx reload 问题（感谢[@all-around-badass](https://gitee.com/all-around-badass) [Gitee issues I5CJR7](https://gitee.com/dromara/Jpom/issues/I5CJR7) ）
-2. 【server】通过私人令牌导入仓库支持自建 GitLab
-3. 【agent】项目文件管理新增重命名文件功能
-4. 快速安装节点支持配置网卡名称（感谢@Elliot）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】构建历史分页查询不生效（感谢[@PQ宝剑](https://gitee.com/pqbaojian) [Gitee issues I5CYOD](https://gitee.com/dromara/Jpom/issues/I5CYOD) ）
-2. 【server】优化编辑 ssh 判断重复,支持多账号配置SSH（感谢[@xiaofangkang](https://gitee.com/xiaofangkang) [Gitee issues I5D0EY](https://gitee.com/dromara/Jpom/issues/I5D0EY) ）
-3. 【agent】文件备份对比流程异步处理,避免大文件对比耗时阻塞（感谢@ʟᴊx💎💎）
-4. 【server】修复通过私人令牌导入仓库表格主键指定错误
-5. 【server】修复 GitLab 通过私人令牌导入仓库接口分页错误
-6. 【agent】优化新增文件、删除文件目录加载两次问题（感谢[@all-around-badass](https://gitee.com/all-around-badass) [Gitee issues I5DMKG](https://gitee.com/dromara/Jpom/issues/I5DMKG) ）
-7. 【server】优化下拉菜单、下拉框跟随页面滚动 （感谢[@pl.com](https://gitee.com/pl.com) [Gitee issues I5D6I0](https://gitee.com/dromara/Jpom/issues/I5D6I0) ）
-8. 【server】导入仓库支持按仓库名搜索
-9. 【server】修复导入仓库 GitLab 私有列显示错误
-10. 副本功能优化,新增名称字段,项目列表快速查看 （感谢[@爱琳琳真是太好了](https://gitee.com/qiqi513_admin) [Gitee issues I5E52A](https://gitee.com/dromara/Jpom/issues/I5E52A) ） 
-11. 【server】修复非默认工作空间快速安装节点未正常绑定到对应工作空间问题
-
-------
-
-## 2.9.1 (2022-06-16)
-
-### 🐣 新增功能
-
-1. 【server】SSH 终端新增标签页打开方式（感谢@hu丶向...🤡）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】db 安全检查时机前置(是否开启 web 访问),避免突然关闭数据库（感谢@信徒）
-2. 【server】修复部分终端弹窗太小问题（感谢@syso）
-3. 【server】修复重新初始化数据库异常问题（感谢@Dream、hu丶向...🤡）
-4. 【server】修复系统管理中查看白名单配置报错（感谢[@all-around-badass](https://gitee.com/all-around-badass) [Gitee issues I5CGO7](https://gitee.com/dromara/Jpom/issues/I5CGO7) ）
-5. 【server】优化监听到路由错误 刷新页面
-6. 【server】修复控制台按钮不能正常使用的情况（感谢@😱 会 🎉、ccx2480）
-
-------
-
-## 2.9.0 (2022-06-13)
-
-### 🐣 新增功能
-
-1. 【server】SSH 终端新增全屏方式打开
-   （感谢[@jaseeon](https://gitee.com/jaseeon) [Gitee issues I5BS52](https://gitee.com/dromara/Jpom/issues/I5BS52) ）
-2. 【server】SSH 新增超时时间配置（感谢@带刺的玫瑰）
-3. 【server】SFTP 新增超时时间（感谢@带刺的玫瑰）（特别感谢 [@hutool](https://hutool.cn) 作者紧急发版支持）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】升级 h2 版本，低版本存在漏洞(CVE-2021-23463)
-2. 升级 SpringBoot、Hutool 版本
-3. 【server】修复监控日志未存储到对应的工作空间（感谢@带刺的玫瑰）
+1. 【server】修复 查看 docker 容器日志 web socket 线程被阻塞问题
+2. 【server】优化 日志组件显示高亮、滚动条样式优化
+3. 【server】优化 web socket 会话关闭显示分类
+4. 【server】优化 页面滚动条样式
+5. 【server】优化 编辑关联分发，选择项目下拉框不能显示项目全名称（tooltip）（感谢@LYY）
+6. 【server】优化 监听页面关闭事件，主动关闭 websocket
+7. 【server】修复 批量构建触发器无法正常使用（感谢 [@botboy](https://github.com/cheakin) [Github issues 48](https://github.com/dromara/Jpom/issues/48) ）
+8. 【server】修复 页面关闭 docker 终端未主动关闭后台终端进程问题
+9. 【server】优化 docker 终端页面缓冲区大小自动适应
+10. 【server】优化 项目列表可以查看项目日志（避免控制台卡顿无法操作下载日志）(感谢@阿超)
+11. 【server】优化 日志组件采用虚拟滚动渲染，避免日志过多浏览器卡死
+12. 【server】优化 资产管理支持管理共享仓库
+13. 【server】优化 增大验证码检测功能异常捕捉范围
+14. 【server】修复 令牌导入仓库令牌长度不足问题（感谢 [@Sherman Chu](https://github.com/yeliulee) [Github issues 45](https://github.com/dromara/Jpom/issues/45) ）
+15. 【server】修复 分发列表配置功能无法使用（感谢 [@Free](https://gitee.com/fjlyy321) [Gitee issues I716UI](https://gitee.com/dromara/Jpom/issues/I716UI) ）
+16. 【server】修复 构建卡片布局、构建详情中构建方式显示不正确（感谢@A）
 
 ### ⚠️ 注意
 
-> 此版本为不兼容升级，需要手动升级操作数据相关迁移，操作流程如下：
-
-**（下述流程仅供简单思路参考，不同版本间存在部分差异，详细流程还请差异完整文档：[https://jpom.io/pages/upgrade/2.8.x-to-2.9.x](https://jpom.io/pages/upgrade/2.8.x-to-2.9.x) ）**
-
-1. 导出低版本数据
-	1. 启动程序参数里面添加 --backup-h2
-	2. linux 环境举例：`sh /xxxx/Server.sh restart --backup-h2`
-2. 将导出的低版本数据( sql 文件) 导入到新版本中
-	1. 启动程序参数里面添加 `--replace-import-h2-sql=/xxxx.sql --transform-sql` (路径需要替换为第一步控制台输出的 sql 文件保存路径)
-	2. linux 环境举例：`sh /xxxx/Server.sh restart --replace-import-h2-sql=/xxxx.sql --transform-sql`
-
-✈️ [更详细的升级说明文档](https://jpom.io/pages/upgrade/2.8.x-to-2.9.x)
+1. 如果自定义过 SSH 监控脚本需要自行同步获取 docker 信息脚本
 
 ------
 
-# 2.8.25 (2022-06-10)
+## 2.10.40 (2023-04-19)
 
 ### 🐣 新增功能
 
+1. 【server】新增 容器构建中对 gradle 插件的支持（感谢 [@xiaozhi](https://gitee.com/XiaoZhiGongChengShi) [Gitee pr 188](https://gitee.com/dromara/Jpom/pulls/188) ）
+
 ### 🐞 解决BUG、优化功能
 
-1.【server】修复 docker 集群服务编辑端口配置不能区分开问题（感谢@Y.）
+1. 【server】修复 日志搜索控制台无法正常使用（感谢@左手生活，右手浪漫）
+2. 【server】修复 项目文件跟踪控制台无法正常使用（感谢@左手生活，右手浪漫）
+3. 【server】修复 插件端日志无法正常差异
+4. 【server】修复 docker 拉取镜像不能识别私有仓库地址（@章强）
+5. 【server】优化 编辑构建无法重置已经选择的事件脚本 （感谢@左手生活，右手浪漫）
+6. 【server】优化 登录页面切换验证码自动清空验证码输入框（感谢@TrouBles）
+7. 【server】修复 docker 集群日志查看后未自动关闭造成日志文件继续增长的问题（@无味。）
+8. 【server】优化 服务端缓存项目信息的创建时间和修改时间同步为节点中的数据创建、修改时间
+9. 【server】优化 文件管理支持批量删除（感谢@左手生活，右手浪漫）
+10. 【agent】优化 取消 hutool-cache 包依赖
+11. 【server】优化 JustAuth fastjson 依赖配置为 fastjson2
+12. 【agent】修复 获取项目状态部分情况出现 NPE （感谢@酱总）
+13. 【server】修复 清空浏览器缓存未跳转到登录页面
+14. 【server】优化 构建拉取 git 仓库支持使用服务器中的 git 插件，实现配置克隆深度参数
+15. 【server】修复 删除节点脚本报错（感谢 [@xiaozhi](https://gitee.com/XiaoZhiGongChengShi) [Gitee issues I6USMY](https://gitee.com/dromara/Jpom/issues/I6USMY) ）
+16. 【server】优化 构建 SSH 发布命令支持 `SSH_RELEASE_PATH` 环境变量（感谢@定格）
+17. 【server】修复 全屏终端无法打开文件管理（感谢@Pluto）
+18. 【server】优化 自动探测服务端登录验证码是否可用
+19. 【all】优化 文件编辑后缀识别支持配置文件名或者正则表达式（感谢@MichelleChung）
+20. 【server】优化 支持自动执行触发器清理
+21. 【server】优化 重新登录未加载管理员菜单（@A）
+22. 【server】修复 第三方登录跳转测试丢失
+23. 【server】修复 仓库编辑清除密码按钮弹窗层级问题（感谢 [@轩辕豆豆](https://gitee.com/xuanyuandoudou) [Gitee issues I6VSCR](https://gitee.com/dromara/Jpom/issues/I6VSCR) ）
+24. 【server】修复 优化构建列表卡片布局存在未构建数据布局错乱问题（感谢 [@lin_yeqi](https://gitee.com/lin_yeqi) [Gitee issues I6VUB7](https://gitee.com/dromara/Jpom/issues/I6VUB7) ）
 
 ------
 
-# 2.8.24 (2022-06-09)
-
-### 🐣 新增功能
-
-1. 【server】新增命令行创建数据库备份参数 `--backup-h2` `sh /xxxx/Server.sh restart --backup-h2`
-2. 【server】新增命令行导入 sql 数据文件参数 `--import-h2-sql=/xxxx.sql` `sh /xxxx/Server.sh restart --import-h2-sql=/xxxx.sql`
+## 2.10.39 (2023-04-04)
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】修复切换分页限制数再排序数据查询条数不正确问题
-   （感谢[@Eibons](https://gitee.com/eibons) [Gitee issues I5B47O](https://gitee.com/dromara/Jpom/issues/I5B47O) ）
-2. 【server】优化编辑构建时发布选择 docker 镜像服务名输入改为下拉框（感谢@W）
-3. 【agent】重启项目操作返回停止项目相关信息
-4. 【server】缓存用户选择的每页条数
+1. 【server】修复 资产管理机器管理单个分配工作空间无法正常使用（感谢@咻咻咻秀啊）
+2. 【server】修复 资产管理相关权限、操作日志无法记录问题（感谢@咻咻咻秀啊）
+3. 【server】修复 docker 控制台 、日志无法正常使用
+4. 【server】优化 docker 控制台页面布局优化，支持单独查看 docker-compose
+5. 【server】优化 docker 实时查看日志支持配置是否显示时间戳
+6. 【server】修复 查看文件发布详情节点名称未显示
+7. 【server】优化 发布记录重建不能选中节点
+8. 【server】修复 构建同步到文件管理中心失败（感谢@破冰）
+9. 【server】优化 登录成功主动刷新菜单缓存、切换账号登录工作空间无权限页面白屏（感谢@A、@零壹）
+10. 【all】更名 变更包名为 `org.dromara.jpom`
+11. 【server】修复 编辑 docker 导入证书弹窗无法正常显示问题（感谢@左手生活，右手浪漫）
+12. 【server】修复 工作空间中资产管理相关页面搜索无数据时出现操作引导提示（感谢@酱总）
 
 ------
 
-# 2.8.23 (2022-06-01)
+## 2.10.38 (2023-03-31)
 
 ### 🐣 新增功能
 
+1. 【server】新增 证书管理全部迁移到服务端统一导入 （感谢@.）
+2. 【server】新增 节点项目支持导入，导出（感谢@酱总）
+3. 【server】新增 支持 oauth2 登录（maxkey、gitee、github） （感谢 [@MaxKeyTop](https://gitee.com/maxkeytop_admin) [Gitee pr 183](https://gitee.com/dromara/Jpom/pulls/183) 、@A）
+4. 【all】新增 文件管理发布支持发布到节点指定目录
+5. 【server】新增 构建新增配置排除发布目录表达式（感谢@毛毛虫）
+6. 【all】新增 节点脚本支持全局共享（感谢@奇奇）
+7. 【server】新增 构建状态新增队列等待，用于标记当前构建存于线程排队中（感谢@酱总）
+
 ### 🐞 解决BUG、优化功能
 
-1. 修复构建产物目录输入框限制（50 改为 200）（感谢@H）
-2. 【server】修复节点分发白名单多个节点无法正常保存问题（感谢@ccx2480 ）
-3. 【agent】修改项目目录在不存在时候无法上传文件问题（感谢@ccx2480 ）
+1. 【server】优化 清理单项构建历史保留个数只判断（构建结束、发布中、发布失败、发布失败）有效构建状态，避免无法保留有效构建历史（感谢@张飞鸿）
+2. 【server】优化 节点监控超时时间调整为 30 秒（避免 windows 服务器频繁超时）（感谢@波比）
+3. 【server】优化 打开节点管理页面不刷新节点列表
+4. 【agent】修复 未配置节点白名单时直接创建分发项目报错（感谢@奋起的大牛）
+5. 【server】修复 SSH 关联工作空间的授权目录无法取消
+6. 【server】优化 查看分发项目状态取消折叠 table，调整为独立页面
+7. 【server】优化 逻辑节点没有显示快速安装按钮问题（感谢@酱总）
+8. 【server】优化 docker TLS 证书全部迁移到证书管理，配置证书支持快捷选择 （感谢@.）
+9. 【server】修复 仓库 ssh 协议配置超时时间无法正常拉取代码（感谢@毛毛虫）
+10. 【server】优化 环境管理页面支持查看间隔任务统计信息
+11. 【server】优化 令牌导入仓库模块统一调整为模板配置（部分方式不支持搜索）（感谢@魏宏斌）
+12. 【agent】优化 DSL 项目报警内容添加状态消息（感谢@核桃）
+13. 【server】优化 服务端脚本支持配置全局共享（感谢@酱总）
+14. 【server】优化 删除管理脚本中的 `-XX:+AggressiveOpts` 参数
+    （感谢 [@牛孝祖](https://gitee.com/niuxiaozu) [Gitee issues I6PUNM](https://gitee.com/dromara/Jpom/issues/I6PUNM) ）
+15. 【all】升级 springboot、hutool、fastjson2、svnkit 版本
+16. 【server】修复 资产管理 ssh 分组不生效问题（感谢@A）
+17. 【server】优化 构建详情页面布局（构建触发器、查看构建历史）
+18. 【server】优化 新增构建状态描述来记录构建异常信息
+19. 【server】优化 构建页面新增卡片布局方式
+20. 【server】修复 SSH 分组无法正常搜索、排序异常（感谢@A）
+21. 【server】优化 构建命令支持引用脚本模板内容（便于复杂构建命令管理）（感谢@毛毛虫）
+22. 【server】新增 构建状态新增`队列等待`，用于标记当前构建存于线程排队中（感谢@酱总）
+23. 【server】修复 创建构建选择命令模板无法修改（感谢@定格）
+24. 【server】优化 构建新增配置是否发布隐藏文件属性（感谢@简单）
+
+### ⚠️ 注意
+
+1. 如果节点已经配置过项目文件下载远程地址白名单需要统一配置到服务端的工作空间的白名单。
+2. 已经配置节点项目远程下载白名单将保留只读，不做实际判断
+3. 构建触发器变动，发生异常时 type 为 error,并且新增：statusMsg 字段
+
+### ❌ 不兼容功能
+
+1. 【agent】取消 节点管理证书管理取消上传编辑功能（保留查询删除功能）
+2. 【agent】取消 节点白名单配置取消 ssl 证书路径配置
+3. 【agent】取消 节点项目文件下载远程文件白名单统一调整到服务端白名单配置
 
 ------
 
-# 2.8.22 (2022-05-27)
+## 2.10.37 (2023-03-21)
 
 ### 🐣 新增功能
 
+1. 【server】新增 文件中心添加别名码来为文件进行分类下载，构建添加别名码可以同步到文件中心
+   （感谢 [@大灰灰大](https://gitee.com/linjianhui) [Gitee issues I6OUC8](https://gitee.com/dromara/Jpom/issues/I6OUC8) ）
+2. 【server】新增 服务端在线升级支持配置 beta 计划（”妈妈“再也不用担心没有稳定版了）（感谢@罗俊）
+
 ### 🐞 解决BUG、优化功能
 
-1. 修复监听日志后线程阻塞造成部分功能无法正常使用（控制台等）（感谢@ʟᴊx💎💎）
+1. 【server】优化 容器构建 maven 插件版本错误提示可用版本号，如果构建容器已经存在则忽略远程版本（感谢@大灰灰）
+2. 【server】优化 脚本列表显示脚本 ID，方便快速查看复制
+   （感谢 [@大灰灰大](https://gitee.com/linjianhui) [Gitee issues I6OUDT](https://gitee.com/dromara/Jpom/issues/I6OUDT) ）
+3. 【server】优化 文件管理列表显示，小屏幕部分字段被隐藏（感谢@tinsang）
+4. 【server】优化 docker 拉取镜像自动解析 tag，避免拉取所有镜像，如果没有配置 tag 默认使用 latest（感谢@Again...                       .）
+5. 【server】修复 数据库迁移到 mysql 报错（字段不存在）（感谢@轩辕豆豆）
+6. 【server】修复 节点统计页面错乱问题
+  （感谢 [@轩辕豆豆](https://gitee.com/xuanyuandoudou) [Gitee issues I6OYSU](https://gitee.com/dromara/Jpom/issues/I6OYSU) ）
 
 ------
 
-# 2.8.21 (2022-05-23)
-
-### 🐣 新增功能
-
-1. 新增日志查询功能 （感谢 @
-   、 [@漫步青春的日子](https://gitee.com/imoom) [Gitee issues I54GDY](https://gitee.com/dromara/Jpom/issues/I54GDY) ）
+## 2.10.36 (2023-03-20)
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】修复构建读取 .env
-   文件空时候无法正常使用（感谢[@wangfeng2228952430](https://gitee.com/wangfeng2228952430) [Gitee issues I57DC1](https://gitee.com/dromara/Jpom/issues/I57DC1)
-   ）
-2. 【server】优化构建拉取仓库`锁对象`,避免出现死锁问题（感谢@信徒 ）
-3. 【server】修复节点分发配置多个节点无法正常保存问题（感谢@李道甫 ）
-4. 【agent】上传文件大小限制配置属性默认值恢复为 1GB,避免用户升级后需要逐一配置 （感谢@李道甫 ）
-5. 【server】修复服务端脚本自动删除执行记录未删除日志文件
+1. 【all】优化 缓存管理统一全局任务刷新
+2. 【server】优化 修复数据关联的工作空间ID sql（避免 '' 或者 'null' 无法修复）
+3. 【server】优化 支持手动清理错误工作空间 ID 的数据
+4. 【server】修复 构建 git 仓库无法正常获取问题（感谢@小翼哥）
 
 ------
 
-# 2.8.20 (2022-05-13)
-
-### 🐣 新增功能
+## 2.10.35 (2023-03-20)
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】优化部分弹窗数据和列表数据共用问题（感谢@晴天飛雪 ）
-2. 【server】修复构建产物越级判断问题（感谢@Randy ）
+1. 【server】修复 mysql 数据库无法正常加载（感谢@酱总）
 
 ------
 
-# 2.8.19 (2022-05-13)
+## 2.10.34 (2023-03-20)
 
 ### 🐣 新增功能
 
-1. 【server】节点新增代理配置，实现使用代理访问插件端（感谢@背着砍刀的诗人）
-2. 【server】构建新增差异构建配置选择（如果仓库代码未变动则不执行构建）
-3.
-
-项目管理文件新增备份，自动备份变动的文件（感谢[@少爷123](https://gitee.com/58753101) [Gitee issues I54ZFM](https://gitee.com/dromara/Jpom/issues/I54ZFM)
-）
-
-4. 【server】SH配置和节点配置新增跨工作空间同步功能，方便快速同步信息（感谢[@陈旭](https://gitee.com/chenxu8989)
-   ） [Gitee issues I56YTU](https://gitee.com/dromara/Jpom/issues/I56YTU)
+1. 【server】新增 资产管理 SSH 管理支持导入导出数据（感谢@吃葫芦娃的土拨鼠）
+2. 【server】新增 文件管理中心（用于统一存储管理公共文件）
+3. 【server】新增 仓库令牌导入支持 gogs （gogs 和 gitea 标准一致）
+   （感谢 [@爱琳琳真是太好了](https://gitee.com/qiqi513_admin) [Gitee issues I6CRPS](https://gitee.com/dromara/Jpom/issues/I6CRPS) ）
 
 ### 🐞 解决BUG、优化功能
 
-1. 修复上传文件限制大小异常拦截不生效的问题（感谢@小工匠 ）
-2. 【server】新增配置前端消息弹窗位置属性 `jpom.notificationPlacement`
-   （感谢[@Eibons](https://gitee.com/eibons) [Gitee issues I53V8B](https://gitee.com/dromara/Jpom/issues/I53V8B) ）
-3. 【server】构建历史新增批量删除
-4.
+1. 【server】优化 构建 SSH 发布上传文件执行输出上传进度
+2. 【server】优化 在线构建产物支持同步到文件管理中心
+3. 【server】优化 节点分发、在线构建 webhook 添加 `triggerUser` 参数（感谢@酱总）
+4. 【server】优化 SSH 文件夹管理支持重命名文件夹（感谢@零壹）
+5. 【server】优化 机器名称和 hostname、SSH 机器名称和 hostname 限制字段长度
+6. 【server】优化 DSL 项目支持解析多 PID ：`running:109,205:8080,8082`（感谢@酱总）
+7. 【server】优化 缓存管理页面支持查看运行中的线程同步器、正在构建的ID
+8. 【server】优化 SSH 脚本批量执行采用线程同步器执行（避免线程数大于 CPU 核心数）
+9. 【server】优化 构建 SSH 发布命令响应方式调整为逐行（避免长时间没有任何信息输出）
+10. 【server】优化 资产管理支持批量分配到工作空间
 
-【server】修复关联分发项目，无法选择不同节点下相同的项目的问题（感谢[@宋建平](https://gitee.com/sjping) [Gitee issues I5680N](https://gitee.com/dromara/Jpom/issues/I5680N)
-）
+### ⚠️ 注意
 
-5. 【server】调整 docker-compose 使用卷方式存储数据，避免在部分环境中出现无法正常使用情况 (感谢 [@💎ℳ๓₯㎕斌💎💘](https://gitee.com/weihongbin) 贡献解决方案)
-   （感谢[@笨笨巫师](https://gitee.com/zhangxin_gitosc) [Gitee issues I52OAV](https://gitee.com/dromara/Jpom/issues/I52OAV) ）
-6. 【server】调整节点里面在部分情况下会出现空白行 （感谢[@💎ℳ๓₯㎕斌💎💘](https://gitee.com/weihongbin) ）
-7. 【server】前端部分输入框添加`maxLength` 限制避免出现数据库字段长度不足问题（感谢@ccx2480 ）
-8. 【agent】修复项目下载远程文件解压方法错误（感谢@背着砍刀的诗人 ）
-9. 升级依赖 SpringBoot、Hutool、Docker-Java 版本号
-10. 【server】优化报错构建时未判断构建产物越级问题（感谢@奇奇 ）
+1. 【server】节点管理和项目管理菜单合并到一个菜单
+2. 【server】节点统计页面合并到逻辑节点中不同视图模式查看
 
-> 使用项目文件备份说明：
->
-> 1. 默认未开启文件备份功能
-> 2. 可以配置全局开启，插件端配置（ `extConfig.yml` ）文件中配置`project.fileBackupCount`属性
-> 3. DSL 项目可以在配置内容新增 `file.backupCount` 来开启（DSL 配置优先级最高）
-> 4. 如果配置值小于等于 0 则不开启备份功能
-> 5. 备份文件保留规则为，只保留有差异的文件
-> 6. 同时支持配置仅备份指定文件后缀的文件（详情查看配置文件说明）
+### ❌ 不兼容功能
 
-### 注意：⚠️
+1. 【server】取消 低版本（2.9.x 及其一下）的构建触发器 token 自动同步为新版本
 
-本版本调整了上传文件大小配置参数位置，在插件端升级后可能出现上传文件失败。
+------
 
-可能提示如下:
+## 2.10.33 (2023-03-16)
 
-- 节点上传失败,请优先检查限制上传大小配置是否合理
-- 上传文件太大了,请重新选择一个较小的文件上传吧
+### 🐣 新增功能
 
-出现如上提示信息需要对插件端或者服务端进行配置合理对上传文件大小限制。
-配置方式：在对应端的 `extConfig.yml` 配置文件中配置如下代码
+1. 【server】新增 ssh 基础信息监控（非报警监控）
+2. 【agent】新增 DSL 项目支持解析端口号：`running:109:8080,8082`
+   （感谢 [@大灰灰大](https://gitee.com/linjianhui) [Gitee issues I6N35H](https://gitee.com/dromara/Jpom/issues/I6N35H) ）
+3. 【server】新增 用户支持自定义工作空间名，排序 （感谢@酱总）
+4. 【server】新增 节点分发项目支持排序，设置项目启用/禁用状态（感谢@酱总）
+5. 【server】新增 节点分发支持手动释放删除指定项目
+6. 【server】新增 docker 镜像创建容器新增 runtime 参数
 
-```yaml
-spring:
-  servlet:
-    multipart:
-      # 上传文件大小限制
-      max-request-size: 2GB
-      max-file-size: 1GB
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 插件端在线升级页面无法正常使用（调用到服务端在线升级接口）
+2. 【server】优化 节点在线升级统一管理避免出现 null
+3. 【server】修复 节点信息编码在部分接口出现 NPE （感谢@酱总）
+4. 【server】优化 工作空间中不存在资产管理相关的数据添加默认缺省页（仅管理员显示）
+5. 【server】优化 支持手动释放节点项目的分发属性
+
+### ❌ 不兼容功能
+
+1. 【agent】取消 节点进程列表显示 jpom 项目名
+
+### ⚠️ 注意
+
+1. 【server】优化 在线工具菜单更名为其他管理
+
+------
+
+## 2.10.32 (2023-03-14)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 mysql 数据库因为字段长度问题初始化失败（感谢@xuejun）
+
+------
+
+## 2.10.31 (2023-03-14)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 未配置节点编码方式无法正常保存问题（感谢@初凡 ³）
+
+------
+
+## 2.10.30 (2023-03-14)
+
+### 🐣 新增功能
+
+1. 【all】新增 插件端支持配置发送请求消息编码方式（编码、混淆明文、规避防火墙）
+   （感谢 [@Mr_loyal](https://gitee.com/Mr_loyal) [Gitee pr 179](https://gitee.com/dromara/Jpom/pulls/179) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 导入 gitea 仓库搜索、分页无法正常使用问题
+   （感谢 [@Smith](https://gitee.com/autools) [Gitee pr 175](https://gitee.com/dromara/Jpom/pulls/175) [Gitee pr 174](https://gitee.com/dromara/Jpom/pulls/174) ）
+2. 【server】优化 镜像启动容器不填写运行命令行导致容器启动失败（部分低版本）
+   （感谢 [@失落的世界](https://gitee.com/marmotgo) [Gitee pr 176](https://gitee.com/dromara/Jpom/pulls/176) ）
+3. 【server】修复 节点分发 webhook 输入框的错别字（感谢 @大灰灰 ）
+4. 【server】修复 工作空间环境变量操作日志记录错误问题
+5. 【all】更新 fastjson2 版本
+6. 【all】优化 SSH 命令脚本、服务端脚本、插件端脚本执行参数优化
+   （感谢 [@大灰灰大](https://gitee.com/linjianhui) [Gitee issues I6IPDY](https://gitee.com/dromara/Jpom/issues/I6IPDY) ）
+7. 【server】优化 导入仓库页面提示信息错乱（感谢@零壹）
+8. 【agent】修复 项目修改路径为子目录时 mv 文件触发死循环（感谢@D¹⁹⁹¹）
+9. 【server】修复 查询构建日志可能出现 NPE 问题
+   （感谢 [@Tom Xin](https://gitee.com/meiMingle) [Gitee issues I6MX9G](https://gitee.com/dromara/Jpom/issues/I6MX9G) ）
+10. 【server】优化 系统缓存页面显示当前服务器时间、时区信息
+11. 【server】修复 还原数据后备份状态错误问题
+    （感谢 [@lin_yeqi](https://gitee.com/lin_yeqi) [Gitee issues I6MVL7](https://gitee.com/dromara/Jpom/issues/I6MVL7) ）
+12. 【agent】修复 DSL 项目状态不判断 jps 命令是否正常（感谢@大灰灰）
+13. 【agent】修复 未配置节点白名单时直接创建分发项目报错（感谢@波比）
+
+### ❌ 不兼容功能
+
+1. 【server】删除 COMMAND_INFO 表 type 字段
+
+### ⚠️ 注意
+
+SSH 命令脚本、服务端脚本、插件端脚本默认参数规则变化：参数描述将必填，默认参数在手动执行时无法删除并且可以查看对应参数描述
+
+------
+
+## 2.10.29 (2023-03-10)
+
+### 🐣 新增功能
+
+1. 【server】新增 导入仓库支持 `gitea` 系统
+   （感谢 [@Smith](https://gitee.com/autools) [Gitee pr 173](https://gitee.com/dromara/Jpom/pulls/173) ）
+2. 【server】新增 用户登录日志（取消用户登录生成操作日志的执行日志）
+3. 【server】新增 在线工具验证 cron 表达式 （感谢@奇奇）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 SSH 并发执行脚本引起脚本丢失错误（感谢@墨汁）
+2. 【server】优化 docker 编辑无法连接提示异常详情信息（感谢@章强）
+3. 【agent】优化 节点分发配置白名单到插件端需要验证合法性
+4. 【server】优化 docker 创建容器忽略未配置存储选项参数（感谢@D¹⁹⁹¹）
+5. 【server】优化 docker 管理裁剪功能独立菜单
+6. 【server】修复 资产管理未记录操作日志的问题
+7. 【server】优化 操作日志存储用户名、工作空间名字段
+8. 【server】优化 容器构建查询可用标签容器相关提示
+9. 【server】优化 构建历史列表页面在小屏幕数据显示不全
+   （感谢 [@一只羊](https://gitee.com/hjdyzy) [Gitee issues I6LLA0](https://gitee.com/dromara/Jpom/issues/I6LLA0) ）
+10. 【server】修复 在线构建发布到集群无法正常选择集群服务（感谢@心光）
+
+------
+
+## 2.10.28 (2023-03-08)
+
+### 🐣 新增功能
+
+1. 【agent】新增 项目触发器新增 fileChange 事件（文件变动对应触发点：上传、删除、远程下载、编辑、新增目录或者文件、重命名）
+   （感谢 [@胡明](https://gitee.com/pig_home) [Gitee issues I6KKEK](https://gitee.com/dromara/Jpom/issues/I6KKEK) ）
+2. 【server】新增 镜像创建容器支持配置存储选项（感谢@topsuder、@章强）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 新增 docker 无法使用在线构建功能
+   （感谢 [@失落的世界](https://gitee.com/marmotgo) [Gitee issues I6KTLQ](https://gitee.com/dromara/Jpom/issues/I6KTLQ) ）
+2. 【server】优化 项目文件列表支持前端排序（文件大小、修改时间）
+3. 【server】优化 关闭程序时依次关闭线程池
+4. 【server】优化 工作空间环境变量开放给普通用户编辑
+
+### ⚠️ 注意
+
+插件端需要同步升级，否则项目文件列表排序无法正常使用
+
+------
+
+## 2.10.27 (2023-03-06)
+
+### 🐣 新增功能
+
+1. 【server】新增 资产管理新增 docker 、集群管理
+
+### 🐞 解决BUG、优化功能
+
+1. 【all】升级 springboot 版本
+2. 【server】优化 系统自动同步 docker 已经安装的集群信息
+3. 【server】更新 mysql maven 坐标：`mysql-connector-j`
+4. 【server】修复 构建产物模糊匹配二级剔除配置 `/` 无效
+
+### ⚠️ 注意
+
+新增 docker 资产管理,系统会自动将已经存在的 docker 信息根据 host 去重同步到资产管理中（如果 host
+存在多个工作空间将根据最后更新时间排序使用最新的一条数据）
+
+更新后 docker、集群列表中状态如果出现：`信息丢失` 表示关联数据存在异常不能正常使用，需要删除对应数据重新关联
+
+------
+
+## 2.10.26 (2023-03-03)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 初始化数据库未删除完整问题（感谢@酱总）
+2. 【server】优化 日志阅读选项卡 tab 名称添加项目名称（感谢@tinsang）
+
+------
+
+## 2.10.25 (2023-03-03)
+
+### 🐣 新增功能
+
+1. 【server】新增 构建历史新增产物文件大小
+2. 【all】新增 机器安装 ID 文件（请勿删除数据目录 `INSTALL.json` 文件）
+3. 【agent】新增 插件端新增虚拟内存和交互内存监控趋势
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 构建发布完成，自动删除压缩包文件（节省空间占用大小）（感谢@轩辕豆豆）
+2. 【server】修复 更新构建历史环境变量失败
+3. 【server】取消 SSH 脚本命令参数描述（避免误导用户）
+   （感谢 [@大灰灰大](https://gitee.com/linjianhui) [Gitee issues I6IPDY](https://gitee.com/dromara/Jpom/issues/I6IPDY) ）
+4. 【server】优化 编辑项目文件回显错乱问题
+5. 【server】优化 日志阅读菜单更名日志搜索
+6. 【server】优化 差异构建时，触发取消构建标记构建状态为`构建中断` （感谢@张飞鸿）
+7. 【server】优化 部分窄下拉框新增 tooltip,避免内容过长无法查看 （感谢@墨汁）
+
+### ❌ 不兼容功能
+
+1. 【server】删除 弃用表 NODE_STAT
+2. 【server】删除 弃用表 SYSTEMMONITORLOG
+3. 【server】删除 相关表中的 strike 字段
+
+------
+
+## 2.10.24 (2023-03-01)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 在线构建容器镜像构建参数和镜像标签支持解析环境变量
+2. 【server】优化 替换环境变量，支持 $xxx ${xxx} （感谢@大锅饭集团）
+3. 【server】修复 配置节点分发白名单报错 （感谢@酱总）
+4. 【server】优化 节点分发配置【配置管理-白名单配置】菜单移动到功能管理中【项目管理-分发白名单】
+5. 【server】修复 非管理员无法使用 SSH 终端问题
+   （感谢 [@lilinLue](https://gitee.com/ljlToTlj) [Gitee issues I6IRJV](https://gitee.com/dromara/Jpom/issues/I6IRJV) ）
+
+### ⚠️ 注意
+
+节点分发白名单可能失效，需要重新配置
+
+------
+
+## 2.10.23 (2023-03-01)
+
+### 🐣 新增功能
+
+1. 【server】新增 控制台输出工作空间关联数据错误未关联的表和条数
+2. 【server】新增 资产管理-SSH管理
+3. 【server】新增 构建 SSH 发布支持配置发布前执行命令 （感谢@daniel）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 使用 ANT 产物目录会自动生成模糊匹配表达式文件夹（感谢@leonchen21）
+2. 【server】修复 启动时候未自动触发修复数据逻辑
+3. 【server】修复 SSH 文件管理二级目录以下无法重命名
+4. 【server】优化 SSH 配置授权目录、允许编辑文件后缀、禁止命令移动到资产管理中
+5. 【all】优化 SSH文件、项目文件允许编辑文件的后缀支持配置 * (前提编辑格式统一)
+6. 【server】优化 升级 docker-java 、svnkit 依赖版本
+7. 【server】优化 SSH 支持清空隐藏字段
+
+### ⚠️ 注意
+
+由于新增 SSH 资产管理，之前ssh 配置如果引用的工作空间变量的配置信息可能将失效（作用域不同）.
+如果仍需要变量信息还需要将对应的信息迁移到全局变量中才可以正常使用
+
+------
+
+## 2.10.22 (2023-02-24)
+
+### 🐣 新增功能
+
+1. 【server】新增 仓库新增配置超时属性（避免仓库拉取代码超时）（感谢 [@阿超](https://gitee.com/VampireAchao) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 容器构建无法下载产物（感谢@张飞鸿）
+
+------
+
+## 2.10.21 (2023-02-23)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 容器构建自动删除构建容器
+2. 【server】优化 系统管理菜单名：变更为`插件端配置`，`服务端配置` （感谢@ccx2480）
+3. 【server】修复 机器管理节点配置同步获取信息错乱（使用到服务端配置）（感谢@ccx2480）
+
+------
+
+## 2.10.20 (2023-02-23)
+
+### 🐞 解决BUG、优化功能
+
+1. 【agent】修复 插件端验证项目白名单路径失败（感谢@ccblandy）
+
+------
+
+## 2.10.19 (2023-02-22)
+
+### 🐣 新增功能
+
+1. 【server】新增 容器构建缓存插件支持按照 `path` 全局缓存 `type: global`
+2. 【server】新增 容器构建缓存插件支持缓存 node_modules `mode: copy`
+   (避免出现：[https://github.com/npm/cli/issues/3669](https://github.com/npm/cli/issues/3669))
+3. 【server】新增 构建列表新增批量构建
+   （感谢 [@爱笑的眼睛](https://gitee.com/175cm75kg18cm) [Gitee issues I6GNV2](https://gitee.com/dromara/Jpom/issues/I6GNV2) ）
+4. 【server】新增 机器管理新增查看关联节点功能
+5. 【server】新增 机器新增网络、硬件硬盘查看
+6. 【server】新增 机器管理列表新增表格视图
+7. 【server】新增 手动分发文件、构建分发弹窗新增筛选指定项目进行分发
+   （感谢 [@Smith](https://gitee.com/autools) [Gitee issues I6GQNG](https://gitee.com/dromara/Jpom/issues/I6GQNG) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 构建读取附件环境变量时机调整到 pull 后
+2. 【agent】优化 白名单路径原样保存（避免部分安全组件拦截）
+3. 【server】修复 编辑机器分组名失效问题
+4. 【server】优化 工作空间菜单配置由系统管理移动到工作空间列表管理中
+5. 【server】优化 节点白名单配置分发功能移动到机器管理表格视图中（模板节点）
+6. 【server】优化 节点配置分发功能移动到机器管理表格视图中（模板节点）
+
+------
+
+## 2.10.18 (2023-02-20)
+
+### 🐣 新增功能
+
+1. 【server】新增 资产管理->机器管理
+2. 【server】新增 配置属性：jpom.node.stat-log-keep-days（节点统计日志保留天数）
+3. 【all】新增 机器节点硬盘信息统计
+4. 【all】新增 机器节点网络流量信息统计
+5. 【server】新增 构建触发器新增获取构建日志接口
+   （感谢 [@黑黑](https://gitee.com/c180) [Gitee issues I6G0AT](https://gitee.com/dromara/Jpom/issues/I6G0AT) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】更名 节点列表更名逻辑节点
+2. 【server】修复 节点分发编辑 webhook 字段回显（感谢@酱总）
+3. 【server】优化 在线升级统一机器管理（无需切换工作空间）
+4. 【server】优化 节点管理>在线升级菜单移动到机器管理中
+
+### ❌ 不兼容功能
+
+1. 【server】删除 node_info unLockType 字段
+2. 【server】取消 节点解绑功能
+3. 【server】停止 使用 NODE_STAT 表（暂时保留相关数据）
+4. 【server】替代 MACHINE_NODE_STAT_LOG 表替代 SYSTEMMONITORLOG 表（并暂时保留 SYSTEMMONITORLOG 数据）
+
+### ⚠️ 注意
+
+由于新增机器管理，程序将自动同步节点表中的所有数据`以节点地址去重`后保存到机器表中，如果同一个节点地址出现多条数据（节点存在不同的工作空间）将跟进节点更新时间最新的为准
+
+插件端需要同步更新，否则节点状态、机器状态为：`状态码错误`
+
+如果更新当前版本后出现节点授权码错误：可能原因是之前同一个机器添加多个节点到不同的工作空间并且最后更新的节点中保存的授权信息是错误，导致数据自动同步后仍然是错误的授权信息
+
+------
+
+## 2.10.17 (2023-02-16)
+
+### 🐣 新增功能
+
+1. 【server】新增 构建配置新增严格执行命令模式（判断命令执行状态码是否为0）
+   （感谢@阿克苏市姑墨信息科技有限公司） [Gitee pr 169](https://gitee.com/dromara/Jpom/pulls/169) ）
+2. 【server】新增 节点分发新增 webhook 配置属性（感谢@酱总）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 构建产物配置单属性时，二次匹配不能匹配到文件问题
+   （感谢 [@伤感的风铃草](https://gitee.com/bwy-flc) [Gitee issues I6FETS](https://gitee.com/dromara/Jpom/issues/I6FETS) ）
+2. 【server】优化 构建历史回滚输出相关操作日志（感谢@酱总）
+3. 【server】修复 windows 容器构建无法上传文件到容器问题
+
+------
+
+## 2.10.16 (2023-02-14)
+
+### 🐣 新增功能
+
+1. 【server】新增 docker 列表支持跨工作空间同步
+   （感谢 @[清风柳絮II号](https://gitee.com/zhangfeihong_597) [Gitee issues I6EOIR](https://gitee.com/dromara/Jpom/issues/I6EOIR) ）
+2. 【server】新增 构建历史保存构建环境变量（为回滚流程使用）
+
+### 🐞 解决BUG、优化功能
+
+1. 【all】优化 解压工具支持多种编码格式（GBK、UTF8）（感谢@Again... . ）
+2. 【server】优化 在线构建新增配置文件环境变量测试（`BUILD_CONFIG_BRANCH_NAME`）(感谢@阿克苏市姑墨信息科技有限公司)
+3. 【server】修复 节点分发回滚 NPE （感谢@酱总）
+4. 【server】优化 构建弹窗部分下拉支持手动刷新数据（感谢@张飞鸿）
+
+------
+
+## 2.10.15 (2023-02-13)
+
+### 🐣 新增功能
+
+1. 【server】新增 构建 pull 流程之后新增 `BUILD_COMMIT_ID` 变量
+2. 【server】新增 执行脚本输出可用环境变量（服务端脚本、节点脚本、SSH 脚本、在线构建 pull 成功之后、构建事件脚本）
+3. 【server】新增 构建确认弹窗新增配置构建环境变量
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 节点分发二级路径不能删除问题（感谢@张飞鸿）
+2. 【agent】优化 服务端环境隐私变量字段传递到插件端（已经存在的插件端环境变量默认为隐私变量）
+3. 【agent】修复 DSL 项目模式 status 事件写入日志编码格式跟随系统配置,避免编码格式不正确（已经存在的日志文件可能会乱码,可以删除文件解决）
+4. 【server】优化 提前构建加载附加环境变量（startReady 事件）
+5. 【agent】优化 节点进程列表、内存、cpu、硬盘加载方式采用 oshi
+6. 【server】优化 在线升级页面新版本检测支持本地网络检测
+
+### ⚠️ 注意
+
+插件端需要同步更新，否则节点首页进程列表数据将不能正常显示
+
+------
+
+## 2.10.14 (2023-02-10)
+
+### 🐣 新增功能
+
+1. 【server】新增 构建状态新增`构建中断`（执行事件脚本返回中断构建）
+2. 【server】新增 构建事件脚本支持返回指定关键词中断构建（需要执行事件脚本输出的最后一行，`interrupt $type`）
+3. 【server】新增 构建触发器将请求参数传入构建环境变量（`triggerContentType`、`triggerBodyData`）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 构建产物为文件夹打包位置优化（避免存放位置错乱）
+2. 【server】修复 构建触发修改构建产物路径未验证 slip 问题
+3. 【server】优化 本地构建产物模糊匹配（ant path）支持配置截取路径、合并文件
+4. 【server】优化 构建日志输出信息（部分调整为中文、消息标签和级别）
+5. 【server】优化 切换工作空间刷新菜单（感谢@ccx2480）
+6. 【server】优化 用户密码提示改为弹窗并且可以快捷复制
+7. 【agent】修复 保存 DSL 项目判断是否存在 status 节点,避免无法删除情况（感谢@张飞鸿）
+8. 【agent】修复 节点项目修改路径移动文件不生效问题
+9. 【agent】取消 编辑项目校验目录存在情况
+10. 【server】优化 项目ID、节点分发ID 支持前端快捷生成
+11. 【server】优化 构建执行事件脚本描述匹配支持 all 关键词 (匹配所有事件)
+12. 【server】修复 执行脚本文件的换行符合跟随系统，避免 windows 中出现异常
+13. 【server】优化 解绑操作提示弹窗更明确（减少误操作）（感谢@酱总）
+
+### ⚠️ 注意
+
+如果使用到产物模糊匹配的请关注是否需要重新调整匹配符。
+
+新版本匹配符支持配置三个属性：
+
+属性1:属性2[可选]:属性3[可选]
+
+**属性1**：为模糊匹配的表达式 ( `Ant-style` )
+
+**属性2**：匹配到的文件保留方式，可用值：`KEEP_DIR`、`SAME_DIR`。（大小写均兼容、配置错误默认为 KEEP_DIR）
+
+KEEP_DIR: 保留匹配到的文件的文件层级
+
+SAME_DIR: 将匹配到的文件均保留到同一个层级（合并到一个文件夹下）。慎用该方式，如果多目录存在相同的文件名会出现合并后只保留匹配到的最后一个文件
+
+**属性3**： 需要剔除匹配到多级文件夹的指定目录,(可以配置为空)。建议配合属性2的`KEEP_DIR`使用。剔除目录可以理解为二次过滤前缀匹配文件
+
+#### 🌰 举个栗子
+
+##### 栗子1： `/web*/**/*.html:KEEP_DIR:/web2/`
+
+表示匹配执行构建后，对应目录下的：已 web 开头的目录下面的所有 html 文件，并且保留文件夹层级关系，最后发布时候需要剔除 /web2/
+
+假设：目录下有如下文件
+
+```log
+/vue/vue.html
+/web/web1.html
+/a/b/t.html
+/web2/a.html
+/web2/b/a.html
+/web1/aa/t.html
+```
+
+执行匹配后的文件
+
+```log
+a.html
+/b/a.html
+```
+
+##### 栗子2： `/web*/**/*.html:SAME_DIR:`
+
+表示匹配执行构建后，对应目录下的：已 web 开头的目录下面的所有 html 文件，并且合并文件到同一个目录，最后发布时候需要剔除
+/web2/
+
+假设：目录下有如下文件
+
+```log
+/vue/vue.html
+/web/web1.html
+/a/b/t.html
+/web2/a.html
+/web2/b/a.html
+/web1/aa/t.html
+```
+
+执行匹配后的文件
+
+```log
+web1.html
+a.html
+t.html
+```
+
+##### 栗子3： `/web*/**/*.html:KEEP_DIR:`
+
+表示匹配执行构建后，对应目录下的：已 web 开头的目录下面的所有 html 文件，并且保留文件夹层级关系，最后发布时候按照原目录结构发布
+
+假设：目录下有如下文件
+
+```log
+/vue/vue.html
+/web/web1.html
+/a/b/t.html
+/web2/a.html
+/web2/b/a.html
+/web1/aa/t.html
+```
+
+执行匹配后的文件
+
+```log
+/web/web1.html
+/web2/a.html
+/web2/b/a.html
+/web1/aa/t.html
 ```
 
 ------
 
-# 2.8.18 (2022-04-12)
+## 2.10.13 (2023-02-08)
 
 ### 🐣 新增功能
 
-1. 【server】SSH文件管理器中加入创建目录和文件的功能
-   （感谢 [@wxyShine](https://gitee.com/wxyShine) [Gitee PR 161](https://gitee.com/dromara/Jpom/pulls/161) ）
-2. 【server】新增禁用登录图形验证码配置属性 `jpom.disabledCaptcha`
-   （感谢 [@放学后的茶会](https://gitee.com/tt2yui) [Gitee issues I4GD0U](https://gitee.com/dromara/Jpom/issues/I4GD0U) ）
-3. 【agent】节点项目文件管理新增创建文件夹/文件功能
-   （感谢 [@Eibons](https://gitee.com/eibons) [Gitee issues I4ZFFH](https://gitee.com/dromara/Jpom/issues/I4ZFFH) ）
+1. 【server】新增 项目支持配置分组属性，方便项目列表筛选
+   （感谢 @[hjk2008](https://gitee.com/hjk2008) [Gitee issues I63PEN](https://gitee.com/dromara/Jpom/issues/I63PEN) ）
+2. 【server】新增 节点分发支持配置分组属性，方便列表筛选
+3. 【agent】新增 DSL 项目支持配置自定义备份路径
+   （感谢 @[陈旭](https://gitee.com/chenxu8989) [Gitee issues I57ZKJ](https://gitee.com/dromara/Jpom/issues/I57ZKJ) ）
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】本地构建命令、本地命令发布、ssh 发布支持加载仓库目录 `.env` 文件为环境变量 （感谢@z~）
-2. 【server】容器相关引用 maven 版本升级为 3.8.5
-3. 【server】容器构建 DSL 示例添加镜像地址说明
-   （感谢 [@wxyShine](https://gitee.com/wxyShine) [Gitee PR 160](https://gitee.com/dromara/Jpom/pulls/160) ）
-4. 【server】本地构建命令添加本次构建相关的默认变量（感谢@杨杰）
-5. 【server】优化 SHH
-   文件管理中文件上传,压缩包上传操作（感谢 [@wxyShine](https://gitee.com/wxyShine) [Gitee PR 161](https://gitee.com/dromara/Jpom/pulls/161)
-   ）
-6. 【agent】批量获取项目状态新增缓存，避免部分环境获取项目状态超时（感谢@奇奇 ）
-7. 远程升级检查地址支持自定义配置，解决没有外网或者网络不同情况下自定义配置升级服务器
+1. 【all】修复 linux 无法正常安装 service （感谢@山上雪）
+2. 【server】优化 构建的节点分发模式增加二级目录
+   （感谢 [@爱琳琳真是太好了](https://gitee.com/qiqi513_admin) [Gitee issues I6DNMX](https://gitee.com/dromara/Jpom/issues/I6DNMX) ）
+3. 【server】优化 构建不保留产物时自动删除产物为目录时的压缩包文件
+4. 【server】优化 构建状态等待`节点分发`完成（阻塞执行节点分发）
+5. 【server】修复 构建选择`节点分发`并关闭`保留产物`，会导致分发失败。
+   （感谢 [@爱琳琳真是太好了](https://gitee.com/qiqi513_admin) [Gitee issues I6DII6](https://gitee.com/dromara/Jpom/issues/I6DII6) ）
+6. 【server】修复 构建分发为`节点分发`，产物为文件时导致的不能回滚
+   （感谢 [@Smith](https://gitee.com/mrsmith) [Gitee issues I6DNSM](https://gitee.com/dromara/Jpom/issues/I6DNSM) ）
+7. 【server】优化 定时构建支持配置禁用表达式，方便临时关闭定时执行
+   （感谢 [@阿超](https://gitee.com/VampireAchao) [Gitee issues I6DNBW](https://gitee.com/dromara/Jpom/issues/I6DNBW) ）
+8. 【server】修复 DSL 项目配置文件备份数量不生效问题
+
+### ⚠️ 注意
+
+Linux 环境 已经安装的需要手动更新一下服务管理脚本
+
+**服务端**：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Service.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Service.sh
+```
+
+**插件端** ：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Service.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Service.sh
+```
 
 ------
 
-# 2.8.17 (2022-03-28)
-
-### 🐣 新增功能
+## 2.10.12 (2023-01-29)
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】修复非超级管理员部分下载功能无法正常使用
-2. 【server】ssh 私钥连接新增 `private key content` 登录
-   （感谢 [@震秦](https://gitee.com/zhzhenqin) [Gitee PR 159](https://gitee.com/dromara/Jpom/pulls/159) ）
-3. 【server】修复非默认工作空间节点分发白名单无法保存问题（感谢@愿好）
+1. 【server】优化 在线终端断开连接时提醒并支持重连
+2. 【server】修复 线程同步器，避免任务过多造成线程数不可控（节点分发相关功能）
+3. 【server】优化 前端打包取消 .map 文件，缩少发布包大小
+   （感谢 [@金技](https://gitee.com/jinjiG) [Gitee issues I6AK0N](https://gitee.com/dromara/Jpom/issues/I6AK0N) ）
+4. 【all】优化 分片上传文件名采用分片序号（伪装文件后缀）（感谢@冷月）
+5. 【all】优化 分片上传文件签名由 sha1 改为 md5 提升效率
+6. 【server】优化 构建历史页面鼠标移到名称下拉项显示文字
+   （感谢 [@伤感的风铃草](https://gitee.com/bwy-flc) [Gitee pr 167](https://gitee.com/dromara/Jpom/pulls/167) ）
+7. 【all】修复 日志监听器 catch 异常日志造成会话未自动删除问题
+   （感谢 [@金技](https://gitee.com/jinjiG) [Gitee issues I6A5QW](https://gitee.com/dromara/Jpom/issues/I6A5QW) ）
+8. 【server】修复 仓库地址 https 证书验证问题（自动忽略验证）
+   （感谢 [@arstercz](https://github.com/arstercz) [Github issues 32](https://github.com/dromara/Jpom/issues/32) ）
+
+### ⚠️ 注意
+
+1. 插件端需要同步升级，否则不能正常使用节点上传文件相关功能
 
 ------
 
-# 2.8.16 (2022-03-10)
+## 2.10.11 (2023-01-10)
 
 ### 🐣 新增功能
 
-1. 【server】docker 创建容器添加执行命令参数
+1. 【server】新增 系统缓存新增分片操作数查看
+2. 【server】新增 节点分片上传支持配置并发数：`jpom.node.upload-file-concurrent`
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】修复工作空间非隐私变量不切换无法创建问题
-2. 【server】修复无法删除工作空间变量
-3. 【server】修复编辑构建数据回显错乱情况（感谢@tan90°）
-4. 【server】修复配置二级路径无法下载日志相关问题（感谢@hu丶向...🤡）
-5. 【server】调整服务端 docker 默认时区为：`Asia/Shanghai` (感谢@z~)
+1. 【server】优化 迁移数据添加更多日志输出
+2. 【server】优化 分片上传解析文件数据采用分片形式，避免大文件造成浏览器奔溃
+3. 【server】优化 插件端在线升级管理页面错误信息提示由弹窗改到对应节点
+4. 【server】修复 迁移数据出现监控报警记录表字段不全问题 （感谢@loyal）
+5. 【server】修复 迁移系统参数表中的 sync_trigger_token 数据重复问题（感谢@loyal）
+6. 【server】优化 取消迁移数据忽略处理（避免默认工作空间名称不迁移）（感谢@loyal）
+7. 【server】优化 获取项目运行状态失败弹窗提醒改为单条数据异常提醒
+8. 【server】优化 服务端项目管理项目列表获取运行状态改为并发执行,缩短加载时间
+9. 【server】优化 分片上传文件中文件选择器禁用
+
+### ❌ 不兼容功能
+
+1. 【server】取消 监控记录实体中的 logId 字段 （感谢@loyal）
+2. 【all】取消 启动时候判断重复启动
 
 ------
 
-# 2.8.15 (2022-03-09)
+## 2.10.10 (2023-01-09)
 
 ### 🐣 新增功能
 
-1. 【server】监控新增 webhook 字段（感谢@[wxyShine](https://gitee.com/wxyShine) ）
-2. 【server】新增自动添加本机 docker (感谢@💎ℳ๓₯㎕斌💎💘)
-3. 【server】docker 镜像创建容器支持环境变量 (感谢@💎ℳ๓₯㎕斌💎💘)
-4. 工作空间变量新增同步到指定节点
-5. 【server】工作空间变量新增隐私字段（来控制关键字段不会二次显示提升字段安全）
+1. 【all】新增 在线升级是否允许降级操作配置属性`jpom.system.allowed-downgrade`
+2. 【server】新增 分发整体状态新增`分发失败`
+3. 【server】新增 构建日志显示进度折叠率配置：`jpom.build.log-reduce-progress-ratio`
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】节点统计图表内存占用率取错字段（感谢@[wxyShine](https://gitee.com/wxyShine) ）
-2. 【server】修复 ssh 上传文件资源未释放问题（感谢@也许是个意外 ）
-3. 【server】备份数据不将 sql 输出到控制台
-4. 【server】取消信号量监听,会出现 kill pid 无法关闭进程的情况
-5. 【server】优化操作报警，能获取到更多到数据名称
-6. 【server】修护工作空间变量编辑使用默认工作空间相关问题（感谢@lidaofu）
-7. 【server】配置自定义 logo 支持远程地址（http）(感谢@wxyShine)
+1. 【server】修复 mysql 环境非`allowMultiQueries`初始化表结构失败（感谢@丿幼儿园逃犯）
+2. 【server】修复 部分表字段缺失问题（strike）
+3. 【server】优化 迁移数据到 mysql 字段大小写跟随实体（感谢@丿幼儿园逃犯）
+4. 【server】修复 导入数据库备份文件目录不存在时报错（感谢@丿幼儿园逃犯）
+5. 【all】优化 节点上传项目文件采用分片上传、并且支持进度显示
+6. 【all】优化 在线升级上传项目包采用分片上传、并且支持进度显示
+7. 【all】优化 在线升级，默认禁止降级操作
+8. 【server】优化 节点分发上传文件采用分片上传、并且支持进度显示
+9. 【server】优化 分发单项的状态信息存储于日志记录中（取消 json 字段存储）
+10. 【server】优化 节点分发子项展示逻辑（同步改异步加载,避免长时间加载）
+11. 【server】优化 构建日志输出各个流程耗时
+12. 【server】优化 构建发布项目文件采用分片上传、并且支持进度显示
+13. 【agent】优化 配置文件中上传文件大小限制由 1G 改为 10MB 节省插件端占用内存大小（采用分片代替）
+14. 【server】优化 手动上传的节点分发文件将自动删除，节省存储空间
+15. 【server】优化 节点分发日志支持显示进度信息
+
+### ⚠️ 注意
+
+1. 插件端需要同步升级，否则节点分发项目无法显示项目名称
+2. 插件端需要同步升级，否则会出现部分接口 404 或者参数不正确的情况
+3. 建议升级验证上传项目文件无问题后，将插件端上传文件大小限制配置属性大改小
+    1. spring.servlet.multipart.max-file-size=5MB
+    2. spring.servlet.multipart.max-request-size=20MB
+
+**如果需要使用 mysql 存储，则需要修改配置**
+
+1. 修改 `jpom.db.mode` 为 `MYSQL`
+2. 修改 `jpom.db.url` 为你 mysql 的 jdbc 地址( jdbc:mysql://127.0.0.1:
+   3306/jpom?useUnicode=true&characterEncoding=UTF-8&useSSL=false)
+3. 修改 `jpom.db.user-name` 为对应 mysql 账户
+4. 修改 `jpom.db.user-pwd` 为对应 mysql 密码
+
+如果您需要迁移之前 h2 数据库中的数据到 mysql（需要先将 mysql 的连接信息配置好后才能迁移）
+
+```shell
+bash ./bin/Server.sh restart -15 --h2-migrate-mysql --h2-user=jpom --h2-pass=jpom
+
+```
 
 ------
 
-# 2.8.14 (2022-02-25)
+## 2.10.9 (2023-01-06)
 
 ### 🐣 新增功能
 
-1. 【server】构建触发器新增获取当前状态接口 （感谢@wxyShine）
-2. 【server】构建确认流程支持修改分支（感谢@）
-3. 【server】服务端脚本新增解绑操作,用于释放关联的过期节点
+1. 【server】新增 服务端数据存储支持 mysql
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】修复编辑构建 svn 类型仓库无法提交问题（感谢@杰 ）
-2. 【server】修复无法使用 git ssh 问题
+1. 【server】修复 在线编辑配置文件报错并修改数据库密码问题
+2. 【server】~~三次修复~~ 在线终端输入部分字符后自动断开连接问题
+3. 【server】升级 svnkit 依赖版本
+4. 【server】优化 docker 标签查询精准查询
+5. 【server】更名 阅读文件更名为跟踪文件
+
+### ❌ 不兼容功能
+
+1. 【server】删除 数据库中多个数据表中弃用字段
+
+### ⚠️ 注意
+
+如果需要使用 mysql 存储，则需要修改配置：
+
+1. 修改 `jpom.db.mode` 为 `MYSQL`
+2. 修改 `jpom.db.url` 为你 mysql 的 jdbc 地址( jdbc:mysql://127.0.0.1:
+   3306/jpom?useUnicode=true&characterEncoding=UTF-8&useSSL=false)
+3. 修改 `jpom.db.user-name` 为对应 mysql 账户
+4. 修改 `jpom.db.user-pwd` 为对应 mysql 密码
+
+如果您需要迁移之前 h2 数据库中的数据到 mysql（需要先将 mysql 的连接信息配置好后才能迁移）
+
+```shell
+bash ./bin/Server.sh restart -15 --h2-migrate-mysql --h2-user=jpom --h2-pass=jpom
+
+```
 
 ------
 
-# 2.8.13 (2022-02-24)
-
-### 🐣 新增功能
-
-1. 【agent】项目 DSL 支持配置项目路径下的脚本
+## 2.10.8 (2023-01-05)
 
 ### 🐞 解决BUG、优化功能
 
-1. 【server】新增个性化配置,导航菜单打开方式（感谢@以为）
-2. 【server】工作空间没有变量不能使用容器构建问题（感谢@杨杰）
-3. 【server】在线构建 ssh 发布选择授权目录切换不生效问题（感谢@天天）
-4. 【server】在线构建本地构建命令不能换行问题（感谢@华仔）
-5. 【server】日志弹窗新增行号
-6. 【server】在线升级执行脚本、脚本模版等兼容 `debian` （感谢@wxyShine [Gitee issues I4UQBD](https://gitee.com/dromara/Jpom/issues/I4UQBD) ）
-7. 【agent】修复 windows 环境，节点首页进程列表切换不生效问题（感谢@neoch [Gitee issues I4UZA7](https://gitee.com/dromara/Jpom/issues/I4UZA7) ）
-8. 【server】脚本模版补充权限
+1. 【all】优化 程序运行的 tmp 文件夹（`java.io.tmpdir`）跟随项目目录
+2. 【all】优化 判断目录越级 `checkSlip` 目录转义至 tmpdir，避免在用户目录生成空白文件夹
 
-------
+### ❌ 不兼容功能
 
-# 2.8.12 (2022-02-18)
+1. 【all】取消 程序启动写入全局临时信息
+2. 【server】取消 服务端没有节点自动探测本地节点功能
 
-### 🐣 新增功能
+### ⚠️ 注意
 
-### 🐞 解决BUG、优化功能
+Linux、Windows 环境 已经安装 2.10.0 ~ 2.10.7 的需要手动更新一下管理脚本
 
-1. 【server】紧急修复初始化系统后没有选择工作空间问题
-
-------
-
-# 2.8.11 (2022-02-18)
-
-### 🐣 新增功能
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】修复操作监控没有判断操作用户
-2. 【server】用户编辑不能修改自己的信息
-3. 【server】优化日志查看器布局错乱
-4. 【agent】修复进程名缓存不全问题
-5. 【server】节点统计新增分组字段，自动同步节点分组（感谢@ʟᴊx💎💎）
-6. 【server】docker 添加说明端口安全问题
-
-------
-
-# 2.8.10 (2022-02-16)
-
-### 🐣 新增功能
-
-1. nginx 删除操作新增还原配置
-2. 【server】新增用户登录日志记录
-3. 【server】log view 新增正则参考
-4. 【server】docker 控制台新增 docker 信息查看
-5. 【server】新增 docker swarm 集群管理
-6. 【server】构建新增是否保存产物配置
-7. 【server】构建 Dockerfile 镜像 tag 支持仓库目录 `.env` 环境变量文件
-8. 【server】docker 控制台新增 docker 网络信息查看
-9. 【server】构建 Dockerfile 镜像支持发布 swarm service
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】 ssh 授权目录不能为根目录
-2. 【server】 在线构建-构建列表中，选择构建命令时新增多环境下打包的命令
-3. 【server】 在线构建-构建列表中，选择构建命令时提供不同的跳过执行测试类的方式
-4. 【server】 编辑用户工作空间权限判断没有选择父级的空权限
-5. 【server】 修改后分发后 **并发重启** 描述改为 **并发执行**
-6. 【server】 自动构建触无法执行（感谢@[zhangfuhua](https://gitee.com/zhangfuhua) ）
-
-------
-
-# 2.8.9 (2022-02-12)
-
-### 🐣 新增功能
-
-1. 【server】容器构建新增 go 环境支持
-2. 【server】新增查看 docker 容器日志
-3. 【server】新增在线进入 docker 容器终端
-4. 【server】构建 ssh 发布支持发布到多个服务器（感谢@[老诗人](https://gitee.com/laoshirenggo) ）
-5. 【server】构建发布方式新增 docker 镜像
-6. 【server】容器管理新增在线镜像创建容器功能
-7. 【server】容器管理新增在线拉取镜像功能
-8. 【server】构建新增是否缓存构建目录
-
-### 🐞 解决BUG、优化功能
-
-1. 在线升级新增验证兼容最小版本号
-2. 【server】支持在线修改数据库账户密码
-3. 执行脚本文件由 `/bin/sh` 改为 `/bin/bash` 兼容 ubuntu
-4. 【agent】项目 dsl 模式执行脚本变量支持直接引入 ${PROJECT_ID}、同时保留 #{PROJECT_ID} 引用
-5. 【server】多处日志查看弹窗新增高亮搜索
-6. 【server】本地构建命令 容器构建支持引用工作空间变量
-7. 【server】修复构建触发器无法执行（感谢@[老诗人](https://gitee.com/laoshirenggo) ）
-8. 【server】服务端脚本新增工作空间环境变量
-9. 修复检查 Jpom
-   包中没有释放资源（感谢@[大海](https://gitee.com/hasape) [Gitee issues I4T9L0](https://gitee.com/dromara/Jpom/issues/I4T9L0) ）
-
-------
-
-# 2.8.8 (2022-02-08)
-
-### 🐣 新增功能
-
-1. 【server】新增容器构建(感谢@💎ℳ๓₯㎕斌💎💘)
-2. 【server】新增容器管理基础版
-3. 【server】节点脚本列表新增快速查看日志入口（感谢@ʟᴊx💎💎）
-4. 【server】构建新增备注字段,可以用于记录版本日志或者本次构建备注（感谢@Alex）
-5. 【server】新增解绑节点、节点分发功能 用于服务器过期或者已经确定不在使用直接删除节点相关数据（感谢@🐠）
-6. 【server】构建命令新增预设命令提示输入,减少用户输入（感谢@hjk2008 [Gitee issues I4SHC9](https://gitee.com/dromara/Jpom/issues/I4SHC9) ）
-7. 【server】批量构建支持指定部分参数使构建更灵活（感谢@hjk2008 [Gitee issues I4SHB4](https://gitee.com/dromara/Jpom/issues/I4SHB4) ）
-8. 【server】用户账号新增两步验证(MFA) 提升账号安全性(感谢@💎ℳ๓₯㎕斌💎💘)
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】优化定时任务检查逻辑,避免不能正常关闭定时任务
-2. 【server】数据库备份新增修改人字段（可以表示备份人和还原操作人）
-3. 【server】邮箱配置权限修改为超级管理员
-4. 【server】修复服务端脚本分发到节点特殊字符编码问题（感谢@ʟᴊx💎💎）
-5. 【server】修复删除节点未删除节点统计数据（感谢@以为）
-6. 升级 SpringBoot 到 2.6.3 (感谢@💎ℳ๓₯㎕斌💎💘)
-7. 【server】解除 SSH 终端禁止命令权限保存失败（感谢@Alex）
-8. 【server】本地构建模式模糊匹配支持匹配多个结果
-9. 【server】修复节点分发不能删除节点问题（感谢@a19920714liou [Gitee issues I4SHSP](https://gitee.com/dromara/Jpom/issues/I4SHSP) ）
-10. 【server】ssh 快捷安装插件端保存安装包避免多次上传 （感谢@a19920714liou [Gitee issues I4SHJC](https://gitee.com/dromara/Jpom/issues/I4SHJC)
-	）
-11. 【server】ssh 快捷安装插件端权限改为管理员
-12. 【server】构建 ssh 发布授权目录采用下拉模式,提升用户操作感知 (
-	感谢@hjk2008 [Gitee issues I4SICE](https://gitee.com/dromara/Jpom/issues/I4SICE) )
-13. 【server】修复数据库自动备份失败问题
-
-> 🙏 特别感谢：[💎ℳ๓₯㎕斌💎💘](https://gitee.com/weihongbin) 贡献容器构建相关架构
-
-------
-
-# 2.8.7 (2022-01-24)
-
-### 🐣 新增功能
-
-1. 【server】新增系统配置-节点白名单、节点系统配置分发功能，方便集群节点统一配置
-2. 【server】新增构建快捷复制功能,方便快速创建类型一致的项目
-3. 【server】新增系统配置-配置菜单是否显示,用于非超级管理员页面菜单控制
-4. 【server】新增节点统计功能，快速了解当前所有节点状态
-5. 【server】新增节点心跳检测配置`system.nodeHeartSecond`
-6. 新增缓存管理查看定时任务执行统计
-7. 【server】新增解除 SSH 终端禁止命令权限（感谢@ooooooam）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】新增全局关闭引导导航配置`jpom.disabledGuide`（感谢@南有乔木）
-2. 【server】修复快速安装服务端 ping 检查超时时间 5ms to 5s
-3. 项目文本文件支持在线实时阅读（感谢@）
-4. 【server】控制台日志支持搜索高亮
-5. 【server】跨工作空间更新节点授权将自动同步更新
-6. 【server】取消节点监控周期字段（采用全局统一配置）
-7. 【server】监控周期调整为 cron 表达式配置,用户可以自定义监控频率
-8. 【server】邮箱配置菜单移动到监控管理
-9. 【server】节点分发白名单配置区分工作空间（不同工作空间不能配置）
-10. 【server】升级 SpringBoot 版本 2.6.2
-11. 脚本模版执行目录修改为脚本所在目录
-12. 【server】SSH 命令模版支持取消默认加载环境变量：`#disabled-template-auto-evn`
-13. 【server】优化页面分页交互逻辑,只有一页不显示分页条
-14. 【server】修复删除 SSH 没有删除执行日志
-
-> ⚠️ 特别提醒：强烈建议升级该版本,当前版本完善了权限拦截相关问题
-------
-
-# 2.8.6 (2022-01-21)
-
-### 🐣 新增功能
-
-1. 项目运行模式新增 Dsl，配合脚本模版实现自定义项目管理
-2. 【server】新增快捷恢复 h2 奔溃数据（启动参数添加：`--recover:h2db`）（感谢@大土豆）
-3. 【server】邮箱配置新增超时时间配置（感谢@Y.）
-4. 新增快速安装导入节点（插件端）
-5. 【server】新增服务端脚本模版（区别于节点脚本模版）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】数据库备份自定义表显示中文描述
-2. 【server】配置 ip 白名单判断是否合法,并且支持 ip/掩码位： `192.168.1.0/24` 格式（感谢@skyou）
-3. 【server】脚本模版独立菜单
-4. 【server】执行升级前自动执行备份数据逻辑（保障数据稳定）
-5. 【server】节点分发项目状态显示节点 ID 更正为节点名称 （感谢@hu丶向...🤡）
-6. 【server】升级 jgit 到 5.13
-7. 【server】fix：恢复删除脚本模版、ssh 命令模版未删除日志数据
-8. 查看项目控制台日志优化（新增滚动和显示行数配置）
-
-> ⚠️ 注意：此次更新了项目控制台日志需要更新插件端后才能正常使用项目控制台否则会出现控制台按钮不可用的情况
-
-------
-
-# 2.8.5 (2022-01-14)
-
-### 🐣 新增功能
-
-1. 新增保留旧包个数配置参数`system.oldJarsCount`
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】恢复删除脚本模版、ssh 命令模版未删除日志数据
-2. 【server】项目副本集没有显示运行端口+进程ID（感谢@ʟᴊx💎💎）
-3. 【server】ssh 发布清除产物目录忽略`No such file`异常
-4. 【server】节点升级中远程下载插件包存储路径更改，并优化更新包后页面显示问题（感谢@hu丶向...🤡）
-5. 脚本模版新增描述字段（感谢@ʟᴊx💎💎）
-6. 在线升级取消重复 jar 包判断,改为自动重命名（感谢@大土豆）
-7. 项目文件管理调整为支持清空当前目录（感谢@ʟᴊx💎💎）
-8. 【server】ssh 列表安装节点按钮判断 java 环境
-
-------
-
-# 2.8.4 (2022-01-06)
-
-### 🐣 新增功能
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】数据库新增连接池配置参数（感谢@ʟᴊx💎💎）
-2. 【agent】fix：解压 tar.gz 文件
-3. 【server】fix：恢复导航助手不能正常显示问题
-4. 【agent】fix 插件端首页不能正常关闭进程（感谢@平安茹意）
-5. 【agent】fix 插件端首页支持自定义进程名（感谢@者羽）
-6. 【server】恢复节点、构建分组字段（感谢@ʟᴊx💎💎）
-7. 【server】后端默认开启 gzip 提升访问速度（感谢@小夜）
-
-------
-
-# 2.8.3 (2021-12-30)
-
-### 🐣 新增功能
-
-1. 脚本模版新增日志管理
-2. 【server】ssh 文件管理新增导入压缩包自动解压（感谢@刘志远）
-3. 脚本模版新增定时执行（感谢@大土豆）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】节点分发数据新增状态字段,启动程序时候触发恢复异常数据
-2. 【server】定时执行相关 cron 表达式输入提示示例数据
-3. 【server】节点升级菜单取消，整合到【系统管理】-> 【在线升级】中
-4. 【server】邮箱配置优化,新增 smtp、port 示例数据，取消 SSL 端口字段（感谢@💎ℳ๓₯㎕斌💎💘）
-5. 【server】fix：新增用户无法正常输入bug（感谢@在路上）
-6. 【server】fix：ssh 命令执行记录菜单没有独立显示问题（感谢@刘志远）
-
-------
-
-# 2.8.2 (2021-12-24)
-
-### 🐣 新增功能
-
-1. 【server】仓库新增导入 Gitee、Github 仓库信息（感谢@💎ℳ๓₯㎕斌💎💘）
-2. 【server】ssh 新增命令模版、可以用于批量执行命令脚本
-3. 新增配置属性 `system.timerMatchSecond` 调度(定时任务)是否开启秒级匹配（感谢@大土豆）
-4. 缓存管理新增清除旧版本程序包功能
-5. 【server】用户权限新增绑定工作空间权限（指定工作空间的修改、删除、上传、执行等权限）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】nginx 列表显示不全，无法滚动问题（感谢@）
-2. 【server】独立节点分发显示节点名称（感谢@奥特曼打猪）
-3. 【server】用户ID（登录名）支持邮箱格式（感谢@陈力）
-4. 【server】优化清除构建和删除构建时候删除相关文件操作（使用系统命令快速删除）（感谢@大土豆、[Gitee PR](https://gitee.com/dromara/Jpom/pulls/155) ）
-5. 【server】项目搜索菜单名变更为项目列表
-6. 【server】调整自动清理日志数据逻辑、默认保留日志数据条数修改为 `10000`
-7. 【server】脚本模版在服务端统一查看、编辑、执行（感谢@ʟᴊx）
-8. 【server】ssh 私钥支持配置文件和加载用户目录下的私钥文件
-9. 【server】初始化超级管理员不能使用 `demo` 关键词（感谢@A.Nevermore）
-
-> ⚠️ 注意：
-> 1. 已经添加的用户重新绑定工作空间权限（默认没有工作空间操作权限）
-
-------
-
-# 2.8.1  (2021-12-17)
-
-### 🐣 新增功能
-
-1. 节点缓存页面新增定时作业列表
-2. 节点首页新增其他类型进程监控（感谢@大土豆）
-3. 构建中的项目发布新增差异发布（多文件项目或者网络不佳情况只发布有变化的文件节省项目发布时间）（感谢@大灰灰）
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】解决节点未配置监控周期接口报错+页面循环提示（感谢@周健全）
-2. Windows 无法关闭 Jpom 程序（感谢@……）
-3. 【server】恢复项目搜索、节点分发项目的文件、控制管理无法正常使用（感谢@刘志远）
-4. 脚本文件提示内容取消中文，修改为英文
-5. 【agent】新增检查 jps 命令执行是否存在异常,异常则提示用户（感谢@……）
-6. 部分控制台输出日志调整为英文
-7. 【server】优化 ssh 安装插件端,不输入节点ID、没有配置权限报错（感谢@大土豆）
-8. 【agent】恢复项目 `JavaExtDirsCp` 模式加载非 Jar 文件问题（感谢@大灰灰）
-9. 升级 SpringBoot 版本 2.6.1
-10. 【agent】恢复项目配置 webhook 后无法关闭进程的情况（感谢@大土豆）
-11. 【server】ssh 命令日志低版本字段类型文件恢复（感谢@大土豆）
-12. 【server】释放独立分发和删除分发项目提示更明确（感谢@周健全）
-13. 【server】恢复自动导入节点异常（感谢@平安茹意）
-14. 恢复节点密码包含特殊字符时节点控制台等相关功能无法正常使用问题（感谢@魔方技术-李广生）
-15. 恢复解锁节点没有指定到对应的工作空间（感谢@周健全）
-
-------
-
-# 2.8.0  (2021-12-14)
-
-### 🐣 新增功能
-
-1. 【server】新增工作空间概念（取代角色相关）【系统将自动创建默认工作空间、默认工作空间是不能删除】
-2. 【server】用户新增可以配置管理员功能【管理员可以管理系统中的账号、系统管理等功能（除升级系统、导入数据外）】
-3. 【server】新增超级管理员（第一次初始化系统等账号为超级管理员），超级可以拥有整个系统权限不受任何限制
-4. 【server】列表数据都新增分页、搜索、排序功能（搜索字段、排序字段正在完善补充中）
-5. 【server】新增通过命令行重置 IP 白名单配置参数 `--rest:ip_config`
-6. 【server】新增通过命令行重置超级管理员参数 `--rest:super_user_pwd`
-7. 【server】新增通过命令行重新加载数据库初始化操作参数 `--rest:load_init_db`
-8. 【server】构建新增`本地命令`发布方式 用户在服务端执行相关命令进行发布操作
-9. 【server】发布命令（SSH发布命令、本地命令）支持变量替换：`#{BUILD_ID}`、`#{BUILD_NAME}`、`#{BUILD_RESULT_FILE}`、`#{BUILD_NUMBER_ID}`
-10. 【server】新增自动备份全量数据配置 `db.autoBackupIntervalDay` 默认一天备份一次,执行备份时间 凌晨0点或者中午12点
-11. 【agent】项目的 webhook 新增项目启动成功后通知，并且参数新增 `type` 指包括：`beforeStop`,`start`,`stop`,`beforeRestart`
-12. 【agent】项目新增自启动配置项,在 agent
-	启动时候检查对应项目是否启动，未启动执行启动逻辑 [Gitee issues I4IJFK](https://gitee.com/dromara/Jpom/issues/I4IJFK)
-13. 【server】构建新增 webhook，实时通知构建进度
-14. 【server】节点分发新增分发间隔时间配置
-15. 新增控制台日志配置数据 `consoleLog.charset` 避免部分服务器执行命令响应乱码 （感谢@……）
-16. 【server】构建触发器新增批量触发 [Gitee issues I4A37G](https://gitee.com/dromara/Jpom/issues/I4A37G)
-17. 【server】构建支持定时触发 [Gitee issues I4FY5C](https://gitee.com/dromara/Jpom/issues/I4FY5C)
-
-### 🐞 解决BUG、优化功能
-
-1. 【server】用户账号、节点、SSH、监控、节点分发等数据由 JSON 文件转存 h2
-2. 【server】取消节点、构建分组字段
-3. 【server】取消角色概念（新增工作空间取代）
-4. 【server】操作监控数据由于数据字段不兼容将不自动升级需要用户重新配置
-5. 【server】系统参数相关配置都由 JSON 转存 h2（邮箱配置、IP白名单、节点分发白名单、节点升级）
-6. 【server】关联节点项目支持绑定单个节点不同项目
-7. 【server】构建触发器新增跟随创建用户走，历史 url 将失效,需要重新生成
-8. 【server】仓库`假删`功能下线，已经删除的仓库将恢复正常（假删功能后续重新开发）
-9. 【agent】项目数据新增工作空间字段、取消分组字段
-10. 【server】节点 ID 取消用户自定义采用系统生成
-11. 【server】优化节点弹窗和菜单折叠页面布局
-12. 【server】编辑节点、SSH、邮箱配置不回显密码字段
-13. 【server】优化 SSH 终端不能自动换行问题
-14. 【agent】脚本模版新增工作空间字段、列表数据并缓存到服务端、新增执行日志
-15. 【server】优化批量操作项目启动、关闭、重启交互
-16. 【agent】恢复在线升级插件端提示 [Agent-.jar] 已经存在啦,需要手动到服务器去上传新包
-17. 自动注册对节点需要手动绑定工作空间后,节点才能正常使用 (感谢@💎ℳ๓₯㎕斌💎💘)
-
-> 🙏 特别感谢：Jpom 社区测试组成员【🐠】、【ʟᴊx】、【hu丶向...🤡】等参与内测的人员
-
-> ⚠️ 注意：
+> 建议先更新脚本再升级插件端或者服务端
 >
-> 【特别说明】：分组字段将失效，目前所有数据在升级后都将默认跟随`默认工作空间`。
->
-> 1: 升级该版本会自动将原 JSON 文件数据转存到 h2 中，如果转存成功旧数据文件将自动移动到数据目录中的 `backup_old_data` 文件夹中
->
-> 2: 升级过程请注意控制台日志是否出现异常
->
-> 3: 操作监控数据由于数据字段不兼容将不自动升级需要用户重新配置
->
-> 4: 监控报警记录、构建记录、操作记录由于字段兼容问题存在部分字段为空的情况
->
-> 5：非超级管理员用户会出现由于未分配工作空间不能正常登录或者不能使用的情况，需要分配工作空间才能登录
->
-> 6: 用户绑定工作空间后，用户在对应工作空间下可以创建、修改、删除对应的数据（包括但不限于管理节点）
->
-> 7: 此次升级启动耗时可能需要2分钟以上（耗时根据数据量来决定），请耐心等待和观察控制台日志输出
->
-> 8: 一个节点建议不要被多个服务端绑定（可能出现数据工作空间错乱情况）
+> Windows 用户需要自行下载脚本替换
+
+**服务端**：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Server.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Server.sh
+```
+
+**插件端** ：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Agent.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Agent.sh
+```
+
 ------
+
+## 2.10.7 (2023-01-04)
+
+### 🐣 新增功能
+
+1. 【server】新增 配置管理新增配置目录在线编辑功能
+2. 【server】新增 容器构建新增 `ubuntu-git` 镜像
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 在线终端输入部分字符后自动断开连接问题（感谢 @Again.... ）
+2. 【server】修复 执行 SSH 脚本未正常加载环境变量问题
+3. 【server】修复 快速安装(绑定)插件端的命令特殊字符转义问题 （感谢@张飞鸿）
+4. 【server】优化 节点在线升级确认操作提醒要升级的目标版本号（感谢@木迷榖）
+5. 【server】优化 modal 弹窗新增 destroyOnClose , 优化页面卡顿和组件样式冲突
+6. 【server】修复 windows nginx 配置文件编辑白名单路径非绝对路径时出现名称错误
+
+### ❌ 不兼容功能
+
+1. 【server】下架 构建配置管理功能（请使用配置目录管理功能代替）
+
+------
+
+## 2.10.6 (2022-12-29)
+
+### 🐣 新增功能
+
+1. 【agent】新增 上传项目文件，下载远程文件 压缩包支持自动剔除文件夹
+2. 【server】新增 节点分发新增手动取消分发任务功能
+   （感谢 [@gxw](https://gitee.com/yinxianer) [Gitee issues I61SBB](https://gitee.com/dromara/Jpom/issues/I61SBB) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 SSH 终端 JSCH 新增日志实现，方便排查问题
+2. 【agent】优化 部分下载接口取消返回值，避免控制台出现错误日志
+3. 【server】优化 服务端代理插件端的 websocket 超时问题
+4. 【server】修复 在线终端输入部分字符后自动断开连接问题（感谢 @Again.... ）
+5. 【server】修复 部分下拉框无法正常搜索文件（感谢 @Again.... ）
+6. 【agent】优化 同时上传相同的文件名时可能异常
+7. 【server】优化 节点分发状态新增（等待分发、手动取消状态）
+8. 【server】修复 状态为未分发时分发失败引起的状态错误
+
+------
+
+## 2.10.5 (2022-12-27)
+
+### 🐣 新增功能
+
+1. 【server】新增 操作日志新增数据名称字段
+
+### 🐞 解决BUG、优化功能
+
+1. 【agent】修复 项目文件夹不存在时不能下载远程文件
+2. 【all】升级 fastjson 升级为 fastjson2
+3. 【all】升级 SpringBoot 2.7.7 、commons-compress
+4. 【server】移除 空闲依赖 jaxb-api
+5. 【all】优化 启动加载流程，保存顺序加载
+6. 【all】修复 启动成功写入全局信息由于没有权限造成的异常
+   （感谢 [@LeonChen21](https://gitee.com/leonchen21) [Gitee issues I67C3C](https://gitee.com/dromara/Jpom/issues/I67C3C) ）
+7. 【server】优化 websocket 控制台操作日志记录
+8. 【server】修复 超级管理的 websocket 操作日志记录工作空间不正确
+9. 【agent】优化 插件端删除 spring-boot-starter-websocket 依赖
+10. 【server】优化 服务端删除 Java-WebSocket 依赖（采用统一模块管理）
+11. 【server】修复 更新构建状态互斥，避免状态被异步更新冲突
+12. 【server】优化 下载文件采用标签页面形式取消 blob
+
+### ❌ 不兼容功能
+
+1. 【server】取消 兼容低版本插件端的 websocket 授权信息传输方式（低版本插件端请同步升级到最新）
+2. 【server】取消 服务端取消向插件端传递操作人的用户名
+3. 【server】取消 服务端数据库用户操作日志表对 REQID 字段兼容（2.9.1 以下）
+
+------
+
+## 2.10.4 (2022-12-23)
+
+### 🐞 解决BUG、优化功能
+
+1. 【all】修复 linux 管理脚本中的 pid 文件内容与真实进程不一致问题
+2. 【all】恢复 linux 管理脚本支持创建服务管理
+
+### ⚠️ 注意
+
+Linux 环境 已经安装 2.10.3 ~ 2.10.0 的需要手动更新一下管理脚本
+
+> 需要`创建服务来管理`的需要更新后才能正常使用在线升级和保存配置并重启
+
+> 建议先更新脚本再升级插件端或者服务端
+
+**服务端**：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Server.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Server.sh
+```
+
+```shell
+curl -LfsSo Service.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Service.sh
+```
+
+**插件端** ：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Agent.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Agent.sh
+```
+
+```shell
+curl -LfsSo Service.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Service.sh
+```
+
+------
+
+## 2.10.3 (2022-12-22)
+
+### 🐣 新增功能
+
+1. 【server】新增 在线构建新增 `packageFile` 流程 编译 webhook 或者事件脚本调用
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】修复 快速导入节点工作空间id `undefined`
+2. 【server】修复 本地运行脚本默认找不到的情况
+3. 【agent】优化 项目控制台日志文件默认编码格式判断系统 windows 默认 GBK,其他默认 UTF-8
+   （感谢 [@gf_666](https://gitee.com/gf_666) [Gitee issues I66ZZZ](https://gitee.com/dromara/Jpom/issues/I66ZZZ) ）
+4. 【server】优化 在线构建 ssh 清空产物异常不标记发布异常
+
+### ⚠️ 注意
+
+Linux 环境 已经安装 2.10.2 ~ 2.10.0 的需要手动更新一下管理脚本，之前管理脚本存在部分场景日志输出错乱的问题
+
+> 建议先更新脚本再升级插件端或者服务端
+
+**服务端**：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Server.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Server.sh
+```
+
+**插件端** ：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Agent.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Agent.sh
+```
+
+------
+
+## 2.10.2 (2022-12-21)
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】节点快速安装命令示例提供默认安装命令
+2. 【server】修复 docker 插件未正常加载问题（感谢@顺子）
+3. 【server】优化 本地构建命令执行方式由逐行改为脚本执行
+4. 【server】修复 构建未配置 webhook 控制台报错
+5. 【server】修复 构建未配置 webhook 不触发事件脚本
+
+### ❌ 不兼容功能
+
+1. 【server】下架 SSH 上传文件安装插件端方式，采用快速安装命令代替
+2. 【server】取消 构建命令和本地命令发布 不支持 #{} 变量替换
+3. 【server】取消 SSH 命令模板 不支持 #{} 变量替换（仅支持 ${} 替换）
+
+------
+
+## 2.10.1 (2022-12-20)
+
+### 🐣 新增功能
+
+1. 【server】新增 节点项目支持快速复制操作
+   （感谢[@mt-mored](https://gitee.com/mt-mored) [Gitee issues I653O3](https://gitee.com/dromara/Jpom/issues/I653O3) ）
+2. 【all】新增 节点项目、独立节点分发支持彻底删除
+3. 【agent】新增 DSL 项目模式执行脚本支持节点环境变量
+   （感谢[@苏生不语](https://gitee.com/sushengbuyu) [Gitee issues I66MNP](https://gitee.com/dromara/Jpom/issues/I66MNP) ）
+4. 【all】新增 构建项目发布、节点分发支持配置发布前先停止（避免 windows 环境文件被占用）
+   （感谢 [@yiziyu](https://gitee.com/yiziyu) [Gitee issues I65MS1](https://gitee.com/dromara/Jpom/issues/I65MS1)、[@all-around-badass](https://gitee.com/all-around-badass) [Gitee issues I66PYU](https://gitee.com/dromara/Jpom/issues/I66PYU) ）
+
+### 🐞 解决BUG、优化功能
+
+1. 【server】优化 节点分发菜单更名为项目管理
+2. 【server】优化 节点分发添加项目限制数量由 2 调整为 1
+   （感谢[@苏生不语](https://gitee.com/sushengbuyu) [Gitee issues I66R73](https://gitee.com/dromara/Jpom/issues/I66R73) ）
+3. 【server】修复 节点分发手动上传文件二级目录出现 `undefined`
+4. 【agent】修复 默认项目模式执行命令存在 `null` 字符串
+5. 【server】修复 初次安装服务端初始化数据库失败问题 （感谢@lg）
+6. 【server】优化 日志显示组件（取消正则搜索），日志删除 `ansi` 颜色
+   （感谢[@苏生不语](https://gitee.com/sushengbuyu) [Gitee issues I657JR](https://gitee.com/dromara/Jpom/issues/I657JR) ）
+7. 【server】优化 编辑组件可能出现行错和内容错乱问题
+8. 【server】优化 查看系统日志的多次切换内容返回错乱问题
+
+### ❌ 不兼容功能
+
+1. 【agent】取消 DSL 项目脚本的 #{} 替换变量
+
+### ⚠️ 注意
+
+Linux 环境 已经安装 2.10.0 的需要手动更新一下管理脚本，2.10.0 管理脚本存在在线升级和在线重启日志输出重复问题
+
+> 建议先更新脚本再升级插件端或者服务端
+
+**服务端**：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Server.sh https://gitee.com/dromara/Jpom/raw/master/modules/server/src/main/bin/Server.sh
+```
+
+**插件端** ：(需要到安装目录的 bin 下执行)
+
+```shell
+curl -LfsSo Agent.sh https://gitee.com/dromara/Jpom/raw/master/modules/agent/src/main/bin/Agent.sh
+```
+
+------
+
+## 2.10.0 (2022-12-19)
+
+### 🐣 新增功能
+
+1. 【all】外置 `logback` 配置文件
+2. 【server】服务端管理相关功能独立页面菜单
+3. 【server】新增项目触发器用于管理项目状态
+4. 【all】新增 构建项目发布支持配置发布到二级目录
+5. 【server】新增 节点分发发布支持配置发布到二级目录
+
+### 🐞 解决BUG、优化功能
+
+1. 【all】启动相关信息由控制台输出改为 `logback`
+2. 【all】节点管理中 `其他功能` 菜单更名为 `脚本管理`
+3. 【all】优化版本升级修改管理脚本里变量,采用文件记录方式
+4. 【server】优化容器启动脚本，支持监听进程已经终端重启操作
+5. 【server】修复 自动刷新页面已经关闭的标签页，后台仍然在发送请求
+   （感谢[@苏生不语](https://gitee.com/sushengbuyu) [Gitee issues I664OP](https://gitee.com/dromara/Jpom/issues/I664OP) ）
+6. 【server】修正触发器说明错别字
+
+### ❌ 不兼容功能
+
+1. 【server】取消支持 2.8.0 以下 json 文件转存数据库
+2. 【all】下架 JDK 管理模块（请使用 DSL 项目模式代替）
+3. 【all】下架 TOMCAT 管理模块（请使用 DSL 项目模式代替）
+4. 【all】删除 项目内存监控页面
+5. 【all】配置文件名称由 `extConfig.yml` 变更为 `application.yml`
+6. 【all】调整项目打包目录结构
+7. 【all】取消兼容低版本数据目录文件迁移（调试运行）
+8. 【all】取消自动识别文件编码格式模块 `auto-charset-jchardet`
+9. 【all】更新管理脚本，进程标识更新（已经存在的需要手动停止）
+10. 【all】取消插件端配置化向服务端注册功能（采用快速导入方式替代）
+11. 【server】取消服务端授权 token 配置
+12. 【all】下架 节点脚本导入功能
+13. 【server】取消限制创建用户最大数配置：`user.maxCount`
+14. 【server】删除 node_info 表 cycle 字段
+15. 【agent】删除项目回收记录功能
+
+### ❌ 不兼容的属性配置变更
+
+> 属性配置支持驼峰和下划线
+
+1. 【agent】`whitelistDirectory.checkStartsWith` -> `jpom.whitelist-directory.check-starts-with`
+2. 【agent】`project.stopWaitTime` -> `jpom.project.statusWaitTime`
+3. 【agent】`project.*` -> `jpom.project.*`
+4. 【agent】修正拼写错误 `log.*back*` -> `jpom.project.log.*backup*`
+5. 【agent】`log.*` -> `jpom.project.log.*`
+6. 【agent】`log.intiReadLine` -> `jpom.init-read-line`
+7. 【agent】 `log.autoBackConsoleCron` 不支持配置 none (none 使用 `jpom.project.log.autoBackupToFile` 代替)
+8. 【all】删除 `consoleLog.reqXss` 、`consoleLog.reqResponse`
+9. 【all】`consoleLog.charset` -> `jpom.system.console-charset`
+10. 【server】`node.uploadFileTimeOut` -> `jpom.node.uploadFileTimeout`
+11. 【server】`system.nodeHeartSecond` -> `jpom.node.heartSecond`
+12. 【server】`user.*` -> `jpom.user.*`
+13. 【server】`jpom.authorize.expired` -> `jpom.user.tokenExpired`
+14. 【server】`jpom.authorize.renewal` -> `jpom.user.tokenRenewal`
+15. 【server】`jpom.authorize.key` -> `jpom.user.tokenJwtKey`
+16. 【server】`jpom.webApiTimeout` -> `jpom.web.api-timeout`
+17. 【server】删除 `ssh.initEnv`
+18. 【server】批量修正前端相关配置属性均修改到 `jpom.web.*`
+19. 【server】`db.*` -> `jpom.db.*`
+20. 【server】`build.*` -> `jpom.build.*`
+
+### ⚠️ 注意
+
+> 此版本为不兼容升级，需要手动升级修改相关配置才能正常使用
+
+#### 简洁的升级流程
+
+1. 停止正在运行的程序插件端或者服务端
+2. 备份已经存在的插件端或者服务端的数据目录
+3. 手动安装新版本 `2.10.0+`
+4. 还原数据：将备份的数据目录迁移到新安装的数据目录（需要再未运行的状态下操作）
+5. 重启程序
+
+详细的升级文档：[https://jpom.top/pages/upgrade/2.9.x-to-2.10.x/](https://jpom.top/pages/upgrade/2.9.x-to-2.10.x/)
+
+------
+
